# d2

./: CHANGELOG.md  CMakeLists.txt  README.md  main-test.cpp  osv-scanner.json
.github/: dependabot.yml
.github/workflows/: main.yml
include/thezhe/: D2.hpp  avec.hpp  d2.hpp
include/thezhe/avec/: Avec.hpp
include/thezhe/d2/: D2.hpp
include/thezhe/d2/detail/: D2.hpp
src/: D2.cpp
test/: D2.cpp
